--- a/ultra.config
+++ b/ultra.config
@@ -3,7 +3,7 @@
 
 manual = False
 verbose = True
-version = "v2.0.1"
+version = "v2.5.127"
 edition = str(sys.platform).lower()[:3] + " free"
 active_servers = {}
 serv_ack = []
@@ -15,3 +15,8 @@ rbindport = 7575
 exploit = ""
 target = ""
 target_port = 80
+
+// Ultra Options
+
+ultrakey = None
+__donotchange = False
